helm/ordering-app/final-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: andrea-ingress
  namespace: andrea
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3001
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: orders
            port:
              number: 3000
